--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,3 +28,9 @@ aiofiles==23.2.1
 pydantic==2.5.3
 pydantic-settings==2.1.0
 httpx==0.26.0
+slowapi==0.1.9
+
+# Testing
+pytest==9.0.0
+pytest-asyncio==0.23.0
+pytest-cov==4.1.0
