feat: add desktop application for Pool Telemetry with Electron
- Created package.json for the desktop application with necessary scripts and dependencies.
- Added icon resources (ICO, PNG, SVG) for the application.
- Implemented build scripts for the main process using esbuild.
- Developed icon generation script using sharp and png-to-ico.
- Added test scripts to verify Electron context and functionality.
- Enhanced SettingsDialog component to include desktop-specific settings and backend status.
- Integrated API initialization for Electron context in the frontend.
- Established settings store to manage desktop settings and backend interactions.
- Created type definitions for Electron IPC API.
- Developed a Python script to build the backend using PyInstaller.
- Added test script to validate Electron module loading outside the desktop context.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -34,3 +34,6 @@ slowapi==0.1.9
 pytest==9.0.0
 pytest-asyncio==0.23.0
 pytest-cov==4.1.0
+
+# Desktop build (optional - only needed for bundling)
+pyinstaller==6.3.0
