--- a/desktop/package.json
+++ b/desktop/package.json
@@ -2,65 +2,39 @@
   "name": "pool-telemetry-desktop",
   "version": "1.0.0",
   "description": "Pool Telemetry Desktop Application",
-  "main": "dist/main/main.js",
+  "main": ".webpack/main",
   "author": "Pool Telemetry Team",
   "license": "MIT",
   "scripts": {
-    "dev": "concurrently \"npm run dev:main\" \"npm run dev:renderer\"",
-    "dev:main": "node scripts/build-main.js && electron .",
-    "dev:renderer": "cd ../frontend && npm run dev",
-    "build": "npm run build:icons && npm run build:main && npm run build:renderer",
-    "build:icons": "node scripts/generate-icon.js",
-    "build:main": "node scripts/build-main.js",
-    "build:renderer": "cd ../frontend && npm run build",
-    "package": "npm run build && electron-builder",
-    "package:win": "npm run build && electron-builder --win",
-    "postinstall": "electron-builder install-app-deps"
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "build:icons": "node scripts/generate-icon.js"
   },
   "dependencies": {
+    "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.1.0"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^7.4.0",
+    "@electron-forge/maker-squirrel": "^7.4.0",
+    "@electron-forge/maker-zip": "^7.4.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
+    "@electron-forge/plugin-fuses": "^7.11.1",
+    "@electron-forge/plugin-webpack": "^7.4.0",
+    "@electron/fuses": "^1.8.0",
     "@types/node": "^20.10.0",
-    "concurrently": "^8.2.2",
-    "electron": "^27.3.0",
-    "electron-builder": "^24.9.1",
-    "esbuild": "^0.27.2",
+    "@vercel/webpack-asset-relocator-loader": "^1.7.3",
+    "css-loader": "^6.8.1",
+    "electron": "^28.0.0",
+    "node-loader": "^2.0.0",
     "png-to-ico": "^2.1.8",
     "sharp": "^0.33.1",
+    "style-loader": "^3.3.3",
+    "ts-loader": "^9.5.1",
     "typescript": "^5.3.3"
   },
-  "build": {
-    "appId": "com.pooltelemetry.desktop",
-    "productName": "Pool Telemetry",
-    "directories": {
-      "output": "release"
-    },
-    "files": [
-      "dist/**/*",
-      "resources/**/*"
-    ],
-    "extraResources": [
-      {
-        "from": "../backend-dist",
-        "to": "backend",
-        "filter": [
-          "**/*"
-        ]
-      }
-    ],
-    "win": {
-      "target": [
-        "nsis"
-      ],
-      "icon": "resources/icon.ico"
-    },
-    "nsis": {
-      "oneClick": false,
-      "allowToChangeInstallationDirectory": true,
-      "installerIcon": "resources/icon.ico",
-      "uninstallerIcon": "resources/icon.ico",
-      "installerHeaderIcon": "resources/icon.ico"
-    }
+  "config": {
+    "forge": "./forge.config.js"
   }
 }
